    supported.

  [ Colin Watson ]
  * If an auto.d script exits >= 100, skip all remaining auto.d scripts
    since the semantics are supposed to be that we go straight to the
    confirmation prompt.
  * Use GPT label by default on Intel Macs.

  [ Frans Pop ]
  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.

 -- Frans Pop <fjp@debian.org>  Sun, 13 May 2007 04:05:52 +0200

partman-base (107) unstable; urgency=low

  * Multiply menu-item-numbers by 100

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:25:56 -0400

partman-base (106) unstable; urgency=low

  [ Colin Watson ]
  * Close all file descriptors other than 0, 1, and 2 on startup, so that we
    don't hold a pipe to debconf open.
  * Add support for /lib/partman/check.d scripts, intended to contain sanity
    checks run before changes are committed. (These checks were formerly
    typically in /lib/partman/finish.d.)
  * Add an IS_BUSY command to check whether a partition is busy (i.e.
    mounted).
  * definitions.sh (humandev): Handle /dev/md* as well as /dev/md/*.

  [ David Härdeman ]
  * Allow crypto devices to be deleted. Soft-depends on partman-auto 69.

  [ Frans Pop ]
  * Move the "Done" option in the partition menu down to the bottom for
    consistency with the main partman menu. Closes: #416587.

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Colin Watson <cjwatson@debian.org>  Mon, 09 Apr 2007 22:11:43 +0100

partman-base (105) unstable; urgency=low

  * Correct mode in mkfifo call. Thanks to Ben Hutchings. Closes: #412769.
  * Fix the way libparted is called when resizing partitions with a file
    system that libparted does not support. Many thanks to Ben Hutchings
    for the patch. Closes: #380226.

 -- Frans Pop <fjp@debian.org>  Wed,  7 Mar 2007 22:47:26 +0100

partman-base (104) unstable; urgency=low

  [ Joey Hess ]