@@ -1,1 +1,2 @@
+bin
 /lib/partman/auto.d
