@@ -1,0 +1,5 @@
+visual.d lib/partman
+definitions.sh lib/partman
+partman bin
+parted_server bin
+stralign bin
