@@ -1,0 +1,2 @@
+parted_devices bin
+partmap bin
