@@ -13,8 +13,10 @@ partman-base (108) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Move deletion of SVN directories to install-rc script.
   * Improve the way install-rc is called.
+  * Add new udeb partman-utils containing the utilities parted_devices and
+    partmap. Thanks to Robert Millan for contributing partmap.
 
- -- Frans Pop <fjp@debian.org>  Sun, 13 May 2007 04:05:52 +0200
+ -- Frans Pop <fjp@debian.org>  Tue, 15 May 2007 13:41:55 +0200
 
 partman-base (107) unstable; urgency=low
 
